Form Submission Update

--- a/public/styles/login_gyani.css
+++ b/public/styles/login_gyani.css
@@ -37,7 +37,8 @@
     letter-spacing: 1,5px;
     align-items: center;
     justify-content: center;
-    margin-left: 35%;
+    margin-left: 28%;
+    top: 10px;
 
   }
 
@@ -90,7 +91,7 @@
     margin-right: 0;
   }
 
-  .wrapper .header ul li::before{
+  .header ul li::before{
     content: '';
     left: calc(50% + 25px);
     top: 50%;
@@ -103,16 +104,16 @@
     transition: all 0.3s ease;
   }
 
-  .wrapper .header ul li:last-child::before{
+  .header ul li:last-child::before{
     display: none;
   }
 
-  .wrapper .header ul li div{
+  .header ul li div{
     padding: 5px;
     border-radius: 45%;
   }
 
-  .wrapper .header ul li p{
+  .header ul li p{
     width: 50px;
     height: 50px;
     font-weight: bold;
@@ -124,34 +125,34 @@
     transform: translate(25%, 25%);
   }
 
-  .wrapper .header ul li .active::before,
-  .wrapper .header ul li .active p {
+   .header ul li .active::before,
+   .header ul li .active p {
     background: var(--quaternary-color);
   }
 
-  .wrapper .form_wrap{
+  .form_wrap{
     margin-bottom: 35px;
   }
 
-  .wrapper .form_wrap h2{
+  .form_wrap h2{
     color: var(--header-color);
     text-align: center;
     text-transform: uppercase;
     margin-bottom: 20px;
   }
 
-  .wrapper .form_wrap .input_wrap{
+  .form_wrap .input_wrap{
     width: 350px;
     max-width: 100%;
     margin: 0 auto 18px;
   }
 
-  .wrapper .form_wrap .input_wrap label{
+  .form_wrap .input_wrap label{
     display: block;
     margin-bottom: 5px;
   }
 
-  .wrapper .form_wrap .input_wrap input{
+  .form_wrap .input_wrap input{
     width: 100%;
     height: 45px;
     border: 2px solid var(--quaternary-color);
@@ -162,7 +163,7 @@
     color: var(--header-color);
   }
 
-  .wrapper .form_wrap .input_wrap input:focus{
+  .form_wrap .input_wrap input:focus{
     border-color: var(--tertiary-color);
   }
 
@@ -171,23 +172,23 @@
     display: none;
   }
 
-  .wrapper .btns_wrap{
+  .btns_wrap{
     display: flex;
     max-width: 100%;
     margin: 0 auto;
     justify-content: center;
   }
 
-  .wrapper .btns_wrap .common_btns{
+  .btns_wrap .common_btns{
     display: flex;
     justify-content: space-between;
   }
   
-  .wrapper .btns_wrap .common_btns .form_1_btns{
+  .btns_wrap .common_btns .form_1_btns{
     justify-content: flex-end;
   }
 
-  .wrapper .btns_wrap .common_btns button{
+  .btns_wrap .common_btns button{
     width: 130px;
     padding: 8px 10px;
     border: none;
@@ -203,20 +204,20 @@
     transition: all 0.3s ease;
   }
 
-  .wrapper .btns_wrap .common_btns button.btn_back{
+  .btns_wrap .common_btns button.btn_back{
     background: var(--tertiary-color);
   }
-  .wrapper .btns_wrap .common_btns button.btn_next .icon{
+  .btns_wrap .common_btns button.btn_next .icon{
     display: flex;
     margin-left: 10px;
   }
 
-  .wrapper .btns_wrap .common_btns button.btn_next:hover,
-  .wrapper .btns_wrap .common_btns button.btn_done:hover{
+  .btns_wrap .common_btns button.btn_next:hover,
+  .btns_wrap .common_btns button.btn_done:hover{
     background: var(--next-btn-hover);
   }
 
-  .wrapper .btns_wrap .common_btns button.btn_back:hover{
+  .btns_wrap .common_btns button.btn_back:hover{
     background: var(--previous-btn-hover);
   }
 
