--- a/public/styles/register_gyani.css
+++ b/public/styles/register_gyani.css
@@ -51,22 +51,22 @@
     border-radius: 50px 8px;
   }
 
-  .wrapper .header{
+  .header{
     margin-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
-  .wrapper .header{
+  .header{
     margin-bottom: 30px;
     display: grid;
     justify-content: center;
     align-items: center;
   }
 
-  .wrapper .header h4{
-    font-size: 20px;
+  .header h4{
+    font-size: 18px;
     font-weight: bold;
     color: var(--header-color);
     text-transform: uppercase;
@@ -81,14 +81,14 @@
     margin-left: 20px;
   }
 
-  .wrapper .header ul li{
+  .header ul li{
     position: relative;
     list-style: none;
     margin-right: 40px;
   } 
 
-  .wrapper .header ul li::last-child{
-    margin-right: 0;
+  .header ul li::last-child{
+    margin-right: auto;
   }
 
   .header ul li::before{
@@ -114,14 +114,14 @@
   }
 
   .header ul li p{
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     font-weight: bold;
     background: var(--tertiary-color);
     color: var(--text-color);
-    border-radius: 50%;
+    border-radius: 45%;
     text-align: center;
-    line-height: 50px;
+    line-height: 45px;
     transform: translate(25%, 25%);
   }
 
@@ -130,29 +130,28 @@
     background: var(--quaternary-color);
   }
 
-  .form_wrap{
+  .data_info{
     margin-bottom: 35px;
   }
 
-  .form_wrap h2{
+  .data_info h2{
     color: var(--header-color);
     text-align: center;
-    text-transform: uppercase;
     margin-bottom: 20px;
   }
 
-  .form_wrap .input_wrap{
+  .data_info .input_wrap{
     width: 350px;
     max-width: 100%;
     margin: 0 auto 18px;
   }
 
-  .form_wrap .input_wrap label{
-    display: block;
-    margin-bottom: 5px;
+  .data_info .input_wrap label{
+    display: inline-block;
+    margin-bottom: 4px;
   }
 
-  .form_wrap .input_wrap input{
+  .data_info .input_wrap input{
     width: 100%;
     height: 45px;
     border: 2px solid var(--quaternary-color);
@@ -163,7 +162,7 @@
     color: var(--header-color);
   }
 
-  .form_wrap .input_wrap input:focus{
+  .data_info .input_wrap input:focus{
     border-color: var(--tertiary-color);
   }
 
@@ -172,24 +171,20 @@
     display: none;
   }
 
-  .btns_wrap{
+  .common_btns{
     display: flex;
     max-width: 100%;
     margin: 0 auto;
     justify-content: center;
+    gap: 15px;
   }
 
-  .btns_wrap .common_btns{
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .btns_wrap .common_btns .form_1_btns{
-    justify-content: flex-end;
+  .form_1_btns{
+    justify-content: center;
   }
 
-  .btns_wrap .common_btns button{
-    width: 130px;
+  .data_info .common_btns button{
+    width: 100px;
     padding: 8px 10px;
     border: none;
     background: var(--quaternary-color);
@@ -204,21 +199,39 @@
     transition: all 0.3s ease;
   }
 
-  .btns_wrap .common_btns button.btn_back{
+  .common_btns button.btn_back{
     background: var(--tertiary-color);
   }
-  .btns_wrap .common_btns button.btn_next .icon{
+  .data_info .common_btns button.btn_next .icon{
     display: flex;
     margin-left: 10px;
   }
 
-  .btns_wrap .common_btns button.btn_next:hover,
-  .btns_wrap .common_btns button.btn_done:hover{
+  .data_info .common_btns button.btn_back .icon{
+    display: flex;
+    margin-left: 10px;
+  }
+
+  .data_info .common_btns button.btn_next:hover,
+  .data_info .common_btns button.btn_done:hover{
     background: var(--next-btn-hover);
   }
 
-  .btns_wrap .common_btns button.btn_back:hover{
+  .data_info .common_btns button.btn_back:hover{
     background: var(--previous-btn-hover);
+  }
+
+  .password_input_wrap {
+    position: relative;
+  }
+
+  .password_input_wrap ion-icon.eye_icon {
+    position: absolute;
+    top: 30%;
+    right: 25px;
+    transform: translateY(-5%);
+    cursor: pointer;
+    pointer-events: auto;
   }
 
   .modal_wrapper {
